added items without css

--- a/html/home.html
+++ b/html/home.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="../js/myscript.js"></script>
-    <link rel="stylesheet" type="text/css" href="../style/style.css" media=”screen” />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../style/style.css"
+    />
     <title>Document</title>
-</head>
-<header>
+  </head>
+  <header>
     <div>
-    <img src="../src/logo.png" alt="logo">
-    <img src="../src/Minimal Shopping.png" alt="minimal shopping">
+      <img src="../src/logo.png" alt="logo" />
+      <img src="../src/Minimal Shopping.png" alt="minimal shopping" />
     </div>
   </header>
-  
-<body>
 
-    
-<div class="ad_banner">
-<img src="../src/ad.png" alt="logo">
-<img class="kid" src="../src/kid.png" alt="logo">
-<h1 class="off_text">
-    Get 50% Off on <br>
-    Selected categories
-</h1>
-</div>
-
-    <div>
-
+  <body>
+    <div class="ad_banner">
+      <img src="../src/ad.png" alt="logo" />
+      <img class="kid" src="../src/kid.png" alt="logo" />
+      <h1 class="off_text">
+        Get 50% Off on <br />
+        Selected categories
+      </h1>
     </div>
 
- </body>
+    <div >
+        <h2>Products</h2>
+    </div>
+
+    <div class="products_list">
+
+    </div>
+  </body>
 </html>
