--- a/html/home.html
+++ b/html/home.html
@@ -5,11 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="../js/myscript.js"></script>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="../style/style.css"
-    />
+    <link rel="stylesheet" type="text/css" href="../style/style.css" />
     <title>Document</title>
   </head>
   <header>
@@ -29,11 +25,11 @@
       </h1>
     </div>
 
-    <div >
-        <h2>Products</h2>
+    <div>
+      <h2>Products</h2>
     </div>
 
-    <div class="products_list">
+    <div class="products_list" id="products_list">
 
     </div>
   </body>
