--- a/html/home.html
+++ b/html/home.html
@@ -31,6 +31,8 @@
 
     <div class="products_list" id="products_list">
 
+        <a href="../html/all_products.html" class="see_more">See More</a>
+
     </div>
   </body>
 </html>
