created page for all profucts

--- a/html/all_products.html
+++ b/html/all_products.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../js/allProducts.js"></script>
+    <link rel="stylesheet" type="text/css" href="../style/allProducts.css" />
     <title>Document</title>
 </head>
+<header>
+    <div>
+      <img src="../src/logo.png" alt="logo" />
+      <img src="../src/Minimal Shopping.png" alt="minimal shopping" />
+    </div>
+  </header>
 <body>
-    
+    <div class="products_list" id="products_list"></div>
 </body>
 </html>
