--- a/html/home.html
+++ b/html/home.html
@@ -29,10 +29,9 @@
       <h2>Products</h2>
     </div>
 
-    <div class="products_list" id="products_list">
+    <div class="products_list" id="products_list"></div>
 
-        <a href="../html/all_products.html" class="see_more">See More</a>
+    <a href="../html/all_products.html" class="see_more">See More</a>
 
-    </div>
   </body>
 </html>
