--- a/html/productDetails.html
+++ b/html/productDetails.html
@@ -5,11 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+.container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+  .products_list > div {
+    width: 50%;
+   
+    padding: 10px 0;
+  }
+    </style>
 </head>
+<header>
+    <div>
+      <img src="../src/logo.png" alt="logo" />
+      <img src="../src/Minimal Shopping.png" alt="minimal shopping" />
+    </div>
+  </header>
 <body>
     <script>
        let id = localStorage.getItem("productId");
+       if(id ==null){
+        alert('please pick up a product');
+       }
+       else{
+        fetchData();
+function fetchData() {
+  let output = document.getElementsByClassName("container");
+  fetch('https://dummyjson.com/products/'+id)
+    .then((res) => res.json())
+    .then((data) => {
+        let productImg = document.getElementById("image");
+        productImg.src = data.images[0];
+      });
+    
+}
+
+       }
     </script>
+
+<div class="container">
+    <div class="product_image"> <img id="image"/></div>
+   
+    <div class="product_info">
+        <p>fdsfds</p>
+    </div>
+</div>
+
+
 
 </body>
 </html>
