--- a/html/home.html
+++ b/html/home.html
@@ -17,8 +17,8 @@
 
   <body>
     <div class="ad_banner">
-      <img src="../src/ad.png" alt="logo" />
-      <img class="kid" src="../src/kid.png" alt="logo" />
+      <img class="ad" src="../src/ad.png" alt="af" />
+      <img class="kid" src="../src/kid.png" alt="kid" />
       <h1 class="off_text">
         Get 50% Off on <br />
         Selected categories
